--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Cute little test:stuff</title>
+    <title>Mr. Whistle</title>
+    <link rel="stylesheet" href="style.css">
       </head>
   <body>
+    <script src="game.js"></script>
     <h1>WELCOME</h1>
     <p>i put</p>
   </body>
