--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       </head>
   <body>
     <script src="game.js"></script>
-    <h1>WELCOME</h1>
+    <h1>Here Mr whistle game enjoy or something</h1>
     <p>i put</p>
   </body>
 </html>
